force-app/main/default/objects/Partner_Configuration__c/Partner_Configuration__c.object-meta.xml
<CustomObject>
    <label>Partner Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>