force-app/main/default/objects/Partner_Configuration__c/fields/API_Integration_Method__c.field-meta.xml
<CustomField>
    <fullName>API_Integration_Method__c</fullName>
    <label>API Integration Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single API</fullName>
            </value>
            <value>
                <fullName>Ezidebit API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>