force-app/main/default/objects/Partner_Configuration__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>It indicates merchant&apos;s brand</description>
    <inlineHelpText>It indicates merchant&apos;s brand</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eway</fullName>
            </value>
            <value>
                <fullName>Ezidebit</fullName>
            </value>
            <value>
                <fullName>GlobalPayments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>