force-app/main/default/objects/Partner_Configuration__c/fields/CNP_Surcharging_Allowed__c.field-meta.xml
<CustomField>
    <fullName>CNP_Surcharging_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow/Disallow CNP surcharging for the partner</description>
    <label>CNP Surcharging Allowed</label>
    <type>Checkbox</type>
</CustomField>