force-app/main/default/objects/Partner_Configuration__c/fields/Enable_Advocacy_Support__c.field-meta.xml
<CustomField>
    <fullName>Enable_Advocacy_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is enabled, a case will be created for the relevant partners once the welcome email is sent.</description>
    <label>Enable Advocacy Support</label>
    <type>Checkbox</type>
</CustomField>