force-app/main/default/objects/Partner_Configuration__c/fields/ISV_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>ISV_Domain_Name__c</fullName>
    <description>ISV specific domain e.g. meditrust.com.au</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ISV specific domain e.g. meditrust.com.au</inlineHelpText>
    <label>ISV Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>