force-app/main/default/objects/Partner_Configuration__c/fields/Multi_MID_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Multi_MID_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when value is true partner Multi-MID is enabled</description>
    <label>Multi-MID Enabled</label>
    <type>Checkbox</type>
</CustomField>