force-app/main/default/objects/Partner_Configuration__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Configurations</relationshipLabel>
    <relationshipName>Partner_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>