force-app/main/default/objects/Partner_Configuration__c/fields/Partner_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Partner_Logo_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>