force-app/main/default/objects/Partner_Configuration__c/fields/Partner_SIC_Codes__c.field-meta.xml
<CustomField>
    <fullName>Partner_SIC_Codes__c</fullName>
    <description>List all the MCC/SIC codes related to partner to filter on CSA Application MCC tiles</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner SIC Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>