force-app/main/default/objects/Partner_Configuration__c/fields/Payment_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Payment_Solutions__c</fullName>
    <label>Payment Solutions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BPAY</fullName>
            </value>
            <value>
                <fullName>Business Security</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>EFTPOS</fullName>
            </value>
            <value>
                <fullName>Online Payments</fullName>
            </value>
            <value>
                <fullName>PayTo</fullName>
            </value>
            <value>
                <fullName>Phone Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>