force-app/main/default/objects/Partner_Configuration__c/fields/Sales_Model__c.field-meta.xml
<CustomField>
    <fullName>Sales_Model__c</fullName>
    <label>Sales Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guided</fullName>
            </value>
            <value>
                <fullName>Self-serve</fullName>
            </value>
            <value>
                <fullName>Semi-guided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>