force-app/main/default/objects/Partner_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Partner_Account__c</columns>
    <columns>NAME</columns>
    <columns>Partner_SIC_Codes__c</columns>
    <columns>CNP_Surcharging_Allowed__c</columns>
    <columns>API_Integration_Method__c</columns>
    <columns>ISV_Domain_Name__c</columns>
    <columns>Brand__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Partner_Logo_URL__c</columns>
    <columns>Payment_Solutions__c</columns>
    <columns>Multi_MID_Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>